<resources>
    <string name="app_name">FillMyFridge</string>
    <string name="home_hello">Bonjour et bienvenue sur FillMyFridge</string>
    <string name="gen_menu_list">Générer une nouvelle liste de menus</string>
    <string name="du">Du: </string>
    <string name="au">Au: </string>
    <string name="continuer">Continuer</string>
    <string name="gen_lm_dates">Générer une liste de menus</string>
    <string name="gen_lm_meal_number">Préciser le nombre de repas pour chaque jour</string>
    <string name="preciser_nb_personnes">Veuillez préciser le nombre de personnes pour chaque repas</string>
    <string name="preciser_theme">Veuillez préciser un ou plusieurs thèmes pour chaque repas</string>
    <string name="gen_lm_ending_desc">Votre liste de menu est enregistrée.</string>
    <string name="gen_lm_ending_voir_liste">Voir la liste de course associée</string>
    <string name="gen_lm_ending_go_home">Retourner au menu principal</string>
    <string-array name="theme_spinner">
        <item>Gourmand</item>
        <item>Elaboré</item>
        <item>Végétarien</item>
        <item>Salades</item>
        <item>Familial</item>
        <item>Gratin</item>
        <item>Healthy</item>
        <item>Exotique</item>
        <item>Variante</item>
    </string-array>
    <integer-array name="theme_spinner_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </integer-array>
    <string name="open_drawer">OPEN</string>
    <string name="close_drawer">CLOSE</string>
    <string name="home">FillMyFridge</string>
    <string name="apropos">Application réalisée par Alexandre PATELLI et Florian CULIÉ dans le cadre de l UE IF26</string>

</resources>
