<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.utt.if26.fillmyfridge.GenerateListMenuDatesActivity"
    android:id="@+id/drawerLayout">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_home"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen_lm_dates"
                android:id="@+id/generate_date_title"
                android:layout_below="@id/toolbar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="21dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/primaryLightColor"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/generate_date_title"
                android:id="@+id/LL_du">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/du"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/primaryLightColor"
                    android:textSize="15dp"/>
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/gen_menu_list_from"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/LL_au"
                android:layout_below="@id/LL_du">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/au"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/primaryLightColor"
                    android:textSize="15dp"/>
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/gen_menu_list_to"/>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gen_menu_list_dates_continue"
                android:text="@string/continuer"
                android:layout_below="@id/LL_au"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="59dp"
                android:background="@color/primaryLightColor"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:textColor="@color/primaryTextColor"
                android:layout_marginBottom="8dp"/>
        </RelativeLayout>
    </ScrollView>
    <FrameLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@android:color/white">
        <com.mindorks.placeholderview.PlaceHolderView
            android:id="@+id/drawerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </FrameLayout>

</android.support.v4.widget.DrawerLayout>
